--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ license = "MIT"
 license-files = ["LICENSE"]
 requires-python = ">=3.11"
 version = "0.0.2"
+dependencies = [
+  "aiohttp>=3.11.18",
+  "requests>=2.32.3",
+  "backoff>=2.2.1",
+]
